UI improvement + bug fix with scrollbar

--- a/css/common.css
+++ b/css/common.css
@@ -3,3 +3,25 @@ html, body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
 }
+
+.scrollbar::-webkit-scrollbar {
+    width: 6px;
+    height: 100%;
+    z-index: 9999;
+}
+
+#scrollbar::-webkit-scrollbar-thumb {
+    width: 4px;
+    height: 60px;
+    background-color: #000000;
+    border-radius: 3px;
+    z-index: 9999;
+}
+
+#scrollbar::-webkit-scrollbar-thumb:hover {
+    width: 4px;
+    height: 60px;
+    background-color: #000000;
+    border-radius: 3px;
+    z-index: 9999;
+}
