--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 #left-container{
-    overflow-x: hidden;
+    overflow: hidden;
     position: fixed;
+    /* padding-right: 4px; */
     height: 100%;
     width: 20%;
     /* background-color: red; */
@@ -10,6 +11,7 @@
     /* background-color: green; */
     /* filter: drop-shadow(0px 1px 3px #000000); */
     display: flex;
+    flex-direction: column;
 }
 
 #right-container{
@@ -40,7 +42,7 @@
     justify-content: space-between;
     width: 100%;
     height: 50px;
-    filter: drop-shadow(0px 1px 3px #000000);
+    filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.5));
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -72,7 +74,8 @@
     display: flex;
 }
 #placeholder{
-    height: 70px;
+    height: 75px;
+    width: 0px;
 }
 
 .subtitle{
@@ -107,16 +110,30 @@ a{
     cursor: pointer;
 }
 
-#l-i-container{
+.inner-left-container{
     position: relative;
     display: flex;
-    height: 100%;
-    width: 80%;
-    padding-left: 10%;
-    padding-right: 10%;
+    flex-direction: column;
+    /* padding-left: 10%;
+    padding-right: 10%; */
     min-width: 125px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 #loginbutton{
     min-width: 105px;
+}
+
+titlex{
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+#wrapper{
+    position: relative;
+    height: 100%;
+    width: 100%;
+    padding-left: 4px;
+    overflow-x:hidden;
 }
